--- a/R/05_analysis_Sofia.qmd
+++ b/R/05_analysis_Sofia.qmd
@@ -13,7 +13,7 @@ library(ggplot2)
 ## Load Data
 
 ```{r}
-df_no_na_long <- read_tsv(file = here("data/03_dat_aug.tsv"))
+df_no_na_long <- read_tsv(file = here("data/03_dat_aug_long_1.tsv"))
 ```
 
 ## Data Analysis
