Cleaning up, no big changes here

--- a/R/02_clean.qmd
+++ b/R/02_clean.qmd
@@ -78,10 +78,9 @@ df_ful <- setNames(df_ful, c("protein_groups",
                              "gmp_rep_4"))
 ```
 
+## Elongating the dataframe
 
-## Lengthening the Data
-
-There are four or five replicates of each cell type, that are currently stored as 21 variables all with measures of intensity. We use pivot_longer to lengthen the data so that there is one intensity column and one 'sample' column specifying which replicate and which cell type is referred to.
+There are four or five technical replicates of each of the 5 cell types, making up a total of 21 variables - all with measures of intensity. We use pivot_longer to lengthen the data so that there is one intensity column and one 'sample' column specifying which replicate and which cell type is referred to.
 
 ```{r}
 df_long <- df_ful |> 
@@ -97,7 +96,7 @@ Separating the samples column into replicate number and cell type
 
 ```{r}
 df_long <- df_long |> 
-  separate(sample, into = c("cell_type","replicate_n"), sep = "_rep_", remove = FALSE)
+  separate(sample, into = c("cell_type","replicate_n"), sep = "_rep_")
   
 
 ```
@@ -114,13 +113,12 @@ sample_n(df_long,10)
 ```{r}
 
 # produce file 02_dat_clean.tsv
-
-df_long_clean <- df_long
-
+# Directing pathway to store the .tsv  file
 project_path = here()
 setwd(project_path)
 
-write_tsv(df_long_clean, "data/02_dat_clean.tsv") 
+#Writing and saving the clean dataframe to 02_df_clean.tsv.
+write_tsv(df_long, "data/02_df_clean.tsv") 
 
 
 ```
