--- a/R/06_analysis_volcano.qmd
+++ b/R/06_analysis_volcano.qmd
@@ -64,10 +64,10 @@ Genes with statistically significant differential expression lie above a horizon
 ```{r}
 test_plot <- df_mean_intensitities |> 
 pivot_wider(names_from = cell_type, values_from = c(mean, sd)) |> 
-  select(mean_gmp, mean_hsc, sd_gmp, sd_hsc) |> 
-  mutate(log2fold = log2(mean_gmp/mean_hsc)) |> 
+  select(mean_gmp, mean_hsc, sd_cmp, sd_hsc) |> 
+  mutate(log2fold = log2(mean_cmp/mean_hsc)) |> 
   #using the home-made function pval
-  mutate(pval = pval(mu1 = mean_gmp, mu2 = mean_hsc, n1 = 4, n2 = 4, s1 = sd_gmp, s2 = sd_hsc)) |> 
+  mutate(pval = pval(mu1 = mean_cmp, mu2 = mean_hsc, n1 = 4, n2 = 4, s1 = sd_cmp, s2 = sd_hsc)) |> 
   select(protein_groups, log2fold, pval) |> 
   mutate(is_signif = case_when(pval <= 0.05 & log2fold > 0 ~ "up",
                                pval <= 0.05 & log2fold < 0 ~"down",
@@ -76,6 +76,12 @@ pivot_wider(names_from = cell_type, values_from = c(mean, sd)) |>
 
 
 ```
+
+q
+
+We will look at the development from HSC to CLP and from HSC to CMP.
+
+And then from CMP to MEP and from CMP to GMP. Because that is the order in which the cells develop.
 
 ```{r}
 library(ggrepel) 
@@ -86,7 +92,7 @@ test_plot |>
   geom_point(size=1, alpha = 0.5)+
 #  geom_text_repel(aes(label = label), size = 3)+
   theme_minimal()+
-  labs(title = "Expression of GMP relative to HSC",
+  labs(title = "Expression of CLP relative to HSC",
        x = "fold",
        y = "-log10(p)",
        caption = "proteomics data")+
@@ -99,4 +105,19 @@ test_plot |>
 #Use q-value instead of pvalue 
 #Sofias code for defining the color
 #scale_color_manual(values = c("Down-regulated" = "blue", "Up-regulated" = "red", "NA" = "gray"))
+```
+
+```{r}
+test_plot |>
+  ggplot(aes(x = log2fold, y = desc(log10(pval)), color = is_signif))+
+  geom_point(size=1, alpha = 0.5)+
+  theme_minimal()+
+  labs(title = "Expression of CMP relative to HSC",
+       x = "fold",
+       y = "-log10(p)",
+       caption = "proteomics data")+
+  theme(legend.position = "none")+
+  #The horizontal line that indicates significance - remember to check if it correct with qvalue and all
+#  geom_hline(yintercept = 2)+
+  scale_color_manual(values = c("up" = "red", "down" = "blue", "not significant" = "gray"))
 ```
