--- a/R/02_clean.qmd
+++ b/R/02_clean.qmd
@@ -80,15 +80,13 @@ df_ful <- setNames(df_ful, c("protein_groups",
                              "gmp_rep_4"))
 ```
 
-<<<<<<< HEAD
 ## Elongating the dataframe
 
 There are four or five technical replicates of each of the 5 cell types, making up a total of 21 variables - all with measures of intensity. We use pivot_longer to lengthen the data so that there is one intensity column and one 'sample' column specifying which replicate and which cell type is referred to.
-=======
+
 ## Lengthening the Data
 
-There are four or five replicates of each cell type, that are currently stored as 21 variables all with measures of intensity. We use pivot_longer to lengthen the data so that there is one intensity column and one 'sample' column specifying which replicate and which cell type is referred to.
->>>>>>> 49dfd5c191b02fdac89ee354cc101adffa0353da
+There are four or five replicates of each cell type, that are currently stored as 21 variables all with measures of intensity. We use pivot_longer to lengthen the data so that there is one intensity column and one 'sample' column specifying which replicate and which cell type is referred to. \>\>\>\>\>\>\> 49dfd5c191b02fdac89ee354cc101adffa0353da
 
 ```{r}
 df_long <- df_ful |> 
